# test-azure-functions

./: README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: main_func-portal-protheus-prd.yml
blueprints/: protheus_get_table_columns.py
src/: app.py
src/blueprints/: protheus_bloqueio_estoque.py  protheus_export_csv.py  protheus_generic_query.py  protheus_get_table_columns.py  protheus_list_tables.py  protheus_query_json.py  protheus_saldo_estoque.py  protheus_table_count.py
src/config/: table_config.json
src/features/: __init__.py
src/features/databricks/export_csv/: docs.py  handler.py  models.py
src/features/databricks/list_tables/: docs.py  handler.py  models.py
src/features/databricks/query_json/: docs.py  handler.py  models.py
src/features/databricks/table_columns/: docs.py  handler.py  models.py
src/features/databricks/table_count/: docs.py  handler.py  models.py
src/features/protheus/: __init__.py
src/features/protheus/bloqueio_estoque/: docs.py  handler.py  models.py
src/features/protheus/export_csv/: docs.py  handler.py  models.py
src/features/protheus/list_tables/: docs.py  handler.py  models.py
src/features/protheus/query_json/: docs.py  handler.py  models.py
src/features/protheus/table_config/: docs.py  (+2 more)
src/static/: standalone.js
src/utils/: auth.py  openapi.py  protheus.py  protheus_filters.py  table_config.py
src/utils/azure_sql/: __init__.py  client.py
src/utils/databricks/: __init__.py  client.py  filters.py
tests/: test_databricks_filters.py  test_protheus_filters.py  test_table_config.py
(+10 files in other folders)
