[tool.poetry]
name = "func-portal-protheus"
version = "0.1.0"
description = "Portal Operacional Protheus — Azure Functions backend"
authors = ["josesaantos-tba"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
azure-functions = "*"
azure-functions-openapi = "*"
requests = "*"
pydantic = "*"
databricks-sql-connector = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
